Use more expressive conversion