@@ -1,9 +1,9 @@
 package com.github.beatngu13.knapsackproblem.base;
 
 import java.io.Serial;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.LinkedHashSet;
-import java.util.List;
 
 /**
  * A set of knapsack items with predictable iteration order.
@@ -24,7 +24,7 @@ public class Items extends LinkedHashSet<Item> {
 	}
 
 	public Items(final Item... items) {
-		super(List.of(items));
+		super(Arrays.asList(items));
 	}
 
 }
